# sha1-task

./: Application.cpp  Application.hpp  CMakeLists.txt  Result.cpp  Result.hpp  main.cpp  vcpkg.json
